feat: add tax level detail into response
