# docs/swagger.json
@@ -129,6 +129,12 @@
                 "tax": {
                     "type": "number"
                 },
+                "taxLevel": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/tax.TaxLevel"
+                    }
+                },
                 "taxRefund": {
                     "type": "number"
                 }
@@ -139,6 +145,17 @@
             "properties": {
                 "error": {
                     "type": "string"
+                }
+            }
+        },
+        "tax.TaxLevel": {
+            "type": "object",
+            "properties": {
+                "level": {
+                    "type": "string"
+                },
+                "tax": {
+                    "type": "number"
                 }
             }
         }
